# nuev-generator

./: .gitignore  CMakeLists.txt  Makefile  README.md
macros/: .gitignore  macro.mac  macro.mac.template
scripts/: convert.sh  convert_all.sh  process.sh  propagate.sh
scripts/scripts/: clang-format-all.sh
src/: drawflux.cpp  generate.cpp
